import org.apache.tools.ant.filters.ReplaceTokens
import org.gradle.plugins.signing.Sign

plugins {
    alias(libs.plugins.axion.release)
    alias(libs.plugins.java)
    alias(libs.plugins.quarkus)
    alias(libs.plugins.maven.publish)
    id 'signing'
    alias(libs.plugins.nmcp.single)
    alias(libs.plugins.proto.toolchain)
}

scmVersion {
    tag {
        prefix = 'v'
    }
    checks {
        uncommittedChanges = false
        aheadOfRemote = false
        snapshotDependencies = false
    }
}

// Proto toolchain configuration - fetches from Git and generates Java/gRPC code
pipestreamProtos {
    sourceMode = 'git'

    modules {
        register("registration") {
            gitRepo = "https://github.com/ai-pipestream/pipestream-protos.git"
            gitRef = "main"
            gitSubdir = "registration"
        }
        register("pipeline-module") {
            gitRepo = "https://github.com/ai-pipestream/pipestream-protos.git"
            gitRef = "main"
            gitSubdir = "pipeline-module"
        }
    }
}

dependencies {
    // Import pipeline BOM to align all managed versions
    // Version defined in gradle.properties as single source of truth
    implementation platform("ai.pipestream:pipestream-bom:${pipestreamBomVersion}")

    // Quarkus dependencies - using TOML catalog for version management
    implementation libs.quarkus.grpc
    implementation libs.quarkus.arc
    implementation libs.quarkus.cache
    implementation libs.quarkus.vertx
    implementation libs.quarkus.micrometer.registry.prometheus
    implementation 'io.quarkus:quarkus-container-image-docker'
    implementation 'io.quarkus:quarkus-hibernate-reactive-panache'
    implementation 'io.quarkus:quarkus-hibernate-orm'
    implementation 'io.quarkus:quarkus-reactive-mysql-client'
    implementation 'io.quarkus:quarkus-jdbc-mysql'
    implementation 'io.quarkus:quarkus-flyway'
    implementation 'org.flywaydb:flyway-mysql'
    implementation 'io.quarkus:quarkus-smallrye-health'
    implementation 'io.quarkus:quarkus-messaging-kafka'

    // Quarkus Dynamic gRPC Extension (replaces local dynamic-grpc client implementation)
    // Quarkus auto-resolves deployment module via extension metadata
    // Version managed by pipestream-bom
    implementation 'ai.pipestream:quarkus-dynamic-grpc'

    // Consul integration
    // Note: stork-service-discovery-consul is provided by the extension, but we may still need
    // smallrye-mutiny-vertx-consul-client if used elsewhere in the service
    implementation 'io.smallrye.reactive:smallrye-mutiny-vertx-consul-client'
    implementation 'io.smallrye.stork:stork-service-discovery-consul'

    // Quarkus Apicurio Registry Protobuf Extension (Zero-Config)
    // Auto-detects Protobuf message types and configures serializers/deserializers
    // Version managed by pipestream-bom
    implementation 'ai.pipestream:quarkus-apicurio-registry-protobuf'

    // Apicurio Registry v3 client (transitive from extension, but kept for explicit usage if needed)
    implementation libs.apicurio.registry.java.sdk
    implementation libs.apicurio.registry.common

    // Pipestream devservices extension - version managed by pipestream-bom
    implementation 'ai.pipestream:pipestream-quarkus-devservices'

    // Testing - using TOML catalog where available
    testImplementation libs.quarkus.junit5
    testImplementation libs.quarkus.junit5.mockito
    testImplementation 'io.quarkus:quarkus-test-vertx'
    testImplementation 'org.testcontainers:mysql'
    testImplementation libs.rest.assured
    testImplementation libs.wiremock.standalone
    testImplementation libs.wiremock.grpc.extension.standalone
    runtimeOnly libs.quarkus.logging.manager
}

group 'ai.pipestream'
version "${scmVersion.version}"

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    withJavadocJar()
    withSourcesJar()
}

test {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
}
compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

compileTestJava {
    options.encoding = 'UTF-8'
}

// Configure Javadoc task
tasks.withType(Javadoc).configureEach { task ->
    def opts = task.options
    opts.encoding = 'UTF-8'
    opts.charSet = 'UTF-8'
    opts.locale = 'en'
    // Suppress missing Javadoc warnings for now
    opts.addStringOption('Xdoclint:-missing', '-quiet')
    // Exclude internal packages
    task.exclude('**/internal/**', '**/impl/**', '**/test/**')
}

// Enable resource filtering to replace @version@ in application.properties
// Use @ delimiters to avoid conflicts with ${} runtime property placeholders
processResources {
    filesMatching('**/*.properties') {
        filter(ReplaceTokens, tokens: [
            version: project.version.toString()
        ])
    }
}

processTestResources {
    filesMatching('**/*.properties') {
        filter(ReplaceTokens, tokens: [
            version: project.version.toString()
        ])
    }
}

// Publishing configuration
publishing {
    publications {
        // Use a named publication to match signing configuration below
        create('maven', MavenPublication) {
            from components.java
            pom {
                name.set('Platform Registration Service')
                description.set('Central service registry and discovery for the Pipeline platform')
                url.set('https://github.com/ai-pipestream/platform-registration-service')

                licenses {
                    license {
                        name.set('MIT License')
                        url.set('https://opensource.org/license/mit')
                    }
                }

                developers {
                    developer {
                        id.set('krickert')
                        name.set('Pipestream Engine Team')
                    }
                }

                scm {
                    connection.set('scm:git:git://github.com/ai-pipestream/platform-registration-service.git')
                    developerConnection.set('scm:git:ssh://github.com/ai-pipestream/platform-registration-service.git')
                    url.set('https://github.com/ai-pipestream/platform-registration-service')
                }

                // Ensure BOM/platform dependency is included in dependencyManagement
                // This ensures Maven Central can resolve dependency versions from the BOM
                withXml {
                    def projectNode = asNode()
                    
                    // Get or create dependencyManagement node
                    def dmNodes = projectNode.dependencyManagement
                    def dmNode
                    if (dmNodes == null || dmNodes.isEmpty()) {
                        dmNode = projectNode.appendNode('dependencyManagement')
                    } else {
                        // Handle both NodeList and single Node cases
                        dmNode = dmNodes instanceof NodeList ? dmNodes[0] : dmNodes
                    }
                    
                    // Get or create dependencies node within dependencyManagement
                    def depsNodes = dmNode.dependencies
                    def depsNode
                    if (depsNodes == null || depsNodes.isEmpty()) {
                        depsNode = dmNode.appendNode('dependencies')
                    } else {
                        // Handle both NodeList and single Node cases
                        depsNode = depsNodes instanceof NodeList ? depsNodes[0] : depsNodes
                    }
                    
                    // Check if pipeline-bom already exists
                    def existingBom = depsNode.children().find { dep ->
                        dep.groupId?.text() == 'ai.pipestream' && 
                        dep.artifactId?.text() == 'pipestream-bom'
                    }
                    
                    if (!existingBom) {
                        def bomDependency = depsNode.appendNode('dependency')
                        bomDependency.appendNode('groupId', 'ai.pipestream')
                        bomDependency.appendNode('artifactId', 'pipestream-bom')
                        bomDependency.appendNode('version', pipestreamBomVersion)
                        bomDependency.appendNode('type', 'pom')
                        bomDependency.appendNode('scope', 'import')
                    }
                }
            }
        }
    }

    repositories {
        // Publish to Maven Local for development
        mavenLocal()

        // Conditionally add GitHub Packages repository when credentials are available
        def ghRepo = System.getenv('GITHUB_REPOSITORY') ?: 'ai-pipestream/platform-registration-service'
        def ghActor = System.getenv('GITHUB_ACTOR') ?: (project.findProperty('gpr.user') ?: System.getenv('GPR_USER'))
        def ghToken = System.getenv('GITHUB_TOKEN') ?: (project.findProperty('gpr.key') ?: System.getenv('GPR_TOKEN'))
        if (ghActor && ghToken) {
            maven {
                name = 'GitHubPackages'
                url = uri("https://maven.pkg.github.com/${ghRepo}")
                credentials {
                    username = ghActor
                    password = ghToken
                }
            }
        }
    }
}

signing {
    // Read org-level GPG secrets directly, so runnable apps don't need extra env mapping
    def signingKey = System.getenv("GPG_PRIVATE_KEY")
    def signingPassword = System.getenv("GPG_PASSPHRASE")

    if (signingKey && signingPassword) {
        useInMemoryPgpKeys(signingKey, signingPassword)
        sign publishing.publications.maven
    }
}

// Ensure all signing tasks run before nmcp bundles and publishes artifacts
afterEvaluate {
    tasks.matching { it.name.startsWith("nmcpZipAllPublications") || it.name.startsWith("nmcpPublishAllPublicationsToCentralPortal") }
        .configureEach { nmcpTask ->
            nmcpTask.dependsOn(tasks.withType(Sign))
        }
}

nmcp {
    publishAllPublicationsToCentralPortal {
        username = providers.environmentVariable("MAVEN_CENTRAL_USERNAME")
        password = providers.environmentVariable("MAVEN_CENTRAL_PASSWORD")
        publishingType = "AUTOMATIC"
        // Explicitly set baseUrl to use Maven Central Portal (not OSS)
        baseUrl = "https://central.sonatype.com/"
    }
}

